css/style.css
/* ... */
.btn-form:hover,
.btn-form:focus {
  background-color: var(--dark-light-blue);
  border: none;
}
.btn-form:hover .modal-close,
.btn-form:focus .modal-close {
  fill: var(--white);
}

/*mobile*/
@media (max-width: 581px) and (min-resolution: 2dppx) {
  .banner {
    max-height: 432px;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url('../images/banner-mobile-2x.jpg');
  }
}

/*general for tablet & desktop*/
@media (min-width: 582px) {
  .header {
    padding: 0;
    display: block;
  }
  .navigation {
    display: flex;
    align-items: center;
    margin-right: auto;
  }
  .navigation-a {
    font-size: 16px;
    padding: 24px 0;
  }
  .navigation-a:hover::after {
    content: '';
    position: absolute;
    width: 100%;
    left: 0;
    bottom: -1px;
    height: 4px;
    background-color: var(--dark-light-blue);
    border-radius: 2px;
  }
  .menu {
    margin: 0;
    position: static;
    display: flex;
    font-weight: 500;
    padding: 24px 0;
    gap: 40px;
    max-height: 72px;
    z-index: 0;
  }
  .menu-burger {
    display: none;
  }
  .overlay {
    display: none;
  }
  .container {
    margin: 0 auto;
    align-items: center;
    max-width: 1158px;
    padding: 0 15px;
  }
  .contacts-info {
    display: flex;
    margin-left: auto;
    margin-top: 0;
    position: static;
    font-style: normal;
    z-index: 0;
  }
  .list-contacts {
    display: flex;
    align-items: center;
  }
  .list-contacts-item {
    font-size: 12px;
    letter-spacing: 0.04em;
    margin: -1px;
  }
  .list-contacts-item:nth-child(odd) {
    margin-bottom: 0;
  }
  .banner {
    background-color: var(--dark-blue);
  }
  .second-section-list {
    flex-direction: row;
    gap: 24px;
  }

  .team-grid {
    flex-direction: row;
    gap: 64px 24px;
  }
  .row {
    flex-direction: row;
  }
  .subscribe {
    gap: 24px;
    justify-content: start;
  }
  .subscribe-form {
    flex-direction: row;
    gap: 24px;
  }
  .footer-paragraph {
    width: 100%;
    max-width: 264px;
    margin-right: auto;
    justify-content: start;
    font-weight: 500;
  }
  .text-footer {
    text-align: start;
  }
  .footer-social {
    text-align: start;
  }
  /*modal leave contacts*/
  .modal {
    width: 408px;
    height: 584px;
  }

  .modal-paragraph {
    left: 44px;
    height: 25px;
    width: 350px;
  }
  .modal-form {
    transform: translateY(-11px);
    width: 360px;
  }
  .modal {
    padding: 24px;
  }
  .user-privacy-container {
    height: 16px;
    width: 360px;
    top: 474px;
    left: 40px;
  }
  .btn-form {
    top: 511px;
    left: 135.5px;
  }
  .page-wrapper {
    left: -208px;
  }
}
/*tablet*/
@media (min-width: 582px) and (max-width: 1157px) {
  /*header*/
  .section {
    padding: 96px 0;
  }
  .logo {
    flex-grow: 0;
    white-space: nowrap;
    margin-right: 120px;
  }
  .contacts-info {
    max-width: 120px;
    flex-shrink: 0;
  }
  .list-contacts {
    flex-direction: column;
    gap: 10px;
    justify-content: center;
    flex-shrink: 1;
  }
  .contacts-info-a {
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;

  }
  .contacts-info-a:hover,
  .contacts-info-a:focus {
    color: var(--dark-light-blue);
  }
  .contacts-info li {
    list-style-type: none;
    flex-shrink: 0;
  }

  /*first section*/
  .banner {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url('../images/banner-tablet-1x.jpg');
    max-height: 436px;
    padding: 112px 0;
  }
  .hero-text {
    font-size: 56px;
    line-height: 1.07;
    max-width: 496px;
    margin-bottom: 36px;
  }

  /*second section*/
  .second-section-list {
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    margin: 0;
  }
  .element-li {
    flex-basis: calc((100% - 26px) / 2);
  }
  .wt-we-do-paragraph {
    line-height: 1.5;
  }

  /*third section*/
  .team-grid {
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    flex-basis: calc((100% - 24px) / 2);
    margin: 0;
  }

  /*forth section*/
  .portfolio-grid {
    gap: 72px 24px;
  }
  .portfolio-li {
    width: calc((100% - 24px) / 2);
  }

  /*footer*/
  .footer {
    padding: 96px 93px;
    height: auto;
    min-height: 456px;
  }
  .row {
    flex-wrap: wrap;
    gap: 72px 24px;
  }
  .footer-social {
    align-self: flex-start;
  }

  /*modal leave contacts*/
  .page-wrapper {
    top: -260px;
  }
}

@media (min-width: 768px) and (max-width: 1157px) and (min-resolution: 2dppx) {
  .banner {
    display: flex;
    justify-items: center;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url('../images/banner-tablet-2x.jpg');
  }
}
/* ... */

